--- a/.env
+++ b/.env
@@ -23,3 +23,6 @@ AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
 AWS_BUCKET_NAME=
 AWS_REGION_NAME=
+
+EMAIL_HOST_USER=jeevakumar1831@gmail.com
+EMAIL_HOST_PASSWORD=lgeesmvishepqrga
